code style fixes